# Gomoku

./: .clang-format  .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  common.cpp  common.h  main.cpp  mainwindow.cpp  mainwindow.h  moverecords.h  sensor.cpp  sensor.h
src/: board.cpp  board.h  common.h  mainwindow.cpp  mainwindow.h  sensor.cpp  sensor.h
